# zenq

./: .clang-format  .clangd  .flake8  .gitignore  CMakeLists.txt  README.md  pyproject.toml
benchmark/: CMakeLists.txt  main.cpp
benchmark/cpp/: blas_bench.cpp  conv2d_bench.cpp  tensor_bench.cpp
benchmark/cuda/: blas_bench.cpp  conv2d_bench.cpp  kernel_bench.cpp  tensor_bench.cpp
cmake/: hpc_tensor-config.cmake.in
include/backend/: tensor.hpp
include/backend/common/: config.hpp  tensor.hpp  types.hpp
include/backend/compute/: engine.hpp  kernel_base.hpp  tensor.hpp
include/backend/compute/cpu/: conv_kernel.hpp
include/backend/compute/cuda/: conv_kernel.cuh
include/backend/kernels/: kernel_base.hpp
include/backend/kernels/cpu/: conv_kernel.hpp
include/backend/kernels/cuda/: conv_kernel.cuh
include/common/: logging.hpp
include/compute/cpp/: blas.hpp  kernel.hpp  tensor.hpp  view.hpp
include/compute/cpp/kernels/: conv2d.hpp
include/compute/cuda/: blas.cuh  tensor.cuh  wrapper.hpp
include/compute/cuda/kernels/: conv2d.cuh
lib/: main.py
lib/spline/: config.py  engine.py  generator.py  modules.py
proto/: poly.py  spline.py
src/: CMakeLists.txt
src/backend/common/: tensor.cpp
src/backend/compute/: engine.cpp  kernel_base.cpp  tensor.cpp
src/backend/compute/cpu/: conv_kernel.cpp
src/backend/compute/cuda/: conv_kernel.cu
src/common/: tensor.cpp
src/compute/: engine.cpp
src/compute/cpp/: blas.cpp  kernel.cpp  tensor.cpp  view.cpp
src/compute/cpp/kernels/: conv2d.cpp
src/compute/cuda/: blas.cu  tensor.cu
src/compute/cuda/kernels/: conv2d.cu
src/kernels/: kernel_base.cpp
src/kernels/cpu/: conv_kernel.cpp
src/kernels/cuda/: conv_kernel.cu
test/: CMakeLists.txt  backend.cpp  main.cpp
