[tool.poetry]
name = "zenq"
version = "0.1.0"
description = ""
authors = ["Andreas Karatzas <andreas.karatzas@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.0"
lightning = "^2.5.0.post0"
tensorboard = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
